--- a/best-air-fryers/ninja-vs-cosori/index.html
+++ b/best-air-fryers/ninja-vs-cosori/index.html
@@ -1,1 +1,358 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Ninja vs Cosori Air Fryers (2026) | KitchenGearLab</title>
+  <meta name="description" content="Ninja vs Cosori air fryers in 2026: a calm, practical comparison focused on daily workflow, cleanup, noise, and results consistency." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/" />
+  <meta property="og:title" content="Ninja vs Cosori Air Fryers (2026) | KitchenGearLab" />
+  <meta property="og:description" content="A calm, workflow-first comparison: cleanup, noise, controls, and consistency. Trade-offs, not hype." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-vs-cosori-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Editorial comparison scene with two air fryers side-by-side on a clean counter in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ninja vs Cosori Air Fryers (2026) | KitchenGearLab" />
+  <meta name="twitter:description" content="A calm, workflow-first comparison: cleanup, noise, controls, and consistency." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-vs-cosori-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Editorial comparison scene with two air fryers side-by-side on a clean counter in soft daylight." />
+
+  <!-- Performance -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Best Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/" },
+          { "@type": "ListItem", "position": 3, "name": "Ninja vs Cosori", "item": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/#webpage",
+        "url": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/",
+        "name": "Ninja vs Cosori Air Fryers (2026)",
+        "description": "Ninja vs Cosori air fryers in 2026: a calm, practical comparison focused on daily workflow, cleanup, noise, and results consistency.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-vs-cosori/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/ninja-vs-cosori-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" width="32" height="32" alt="" loading="eager" decoding="async" />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Ninja vs Cosori</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <p class="kicker">Comparison</p>
+            <h1 id="hero-title">Ninja vs Cosori Air Fryers</h1>
+
+            <p class="lead">
+              A workflow-first comparison for real kitchens. We focus on the stuff you feel daily:
+              controls, noise, cleanup friction, and consistency at normal loads.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="#decision">Quick decision</a>
+              <a class="btn btn-secondary" href="#comparison">Comparison table</a>
+            </div>
+
+            <p class="micro-note">
+              Trust-first:
+              <a href="/about/">About</a> · <a href="/disclosure/">Disclosure</a> · <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source type="image/webp"
+                      srcset="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-1600x840.webp 1600w,
+                              https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-2400x1260.webp 2400w"
+                      sizes="(max-width: 900px) 100vw, 40vw" />
+              <img src="https://kitchengearlab.github.io/assets/images/hero/ninja-vs-cosori-hero-1600x840.webp"
+                   width="1600" height="840"
+                   alt="Editorial comparison scene with two air fryers side-by-side on a clean counter in soft daylight."
+                   loading="eager" decoding="async" fetchpriority="high" />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="decision" aria-labelledby="decision-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="decision-title">Quick decision</h2>
+          <p class="section-subtitle">Pick a direction before you pick a model.</p>
+        </div>
+
+        <div class="pros-cons">
+          <section class="pros">
+            <h3>Choose Ninja if you want…</h3>
+            <ul>
+              <li>A direct, “get results fast” workflow.</li>
+              <li>Strong crisping feel for everyday foods.</li>
+              <li>Models that prioritize practical cooking over fancy extras.</li>
+            </ul>
+          </section>
+
+          <section class="cons">
+            <h3>Choose Cosori if you want…</h3>
+            <ul>
+              <li>A value-focused path with strong options depending on model.</li>
+              <li>Simple controls and a straightforward learning curve.</li>
+              <li>A lighter footprint for some kitchens (measure first).</li>
+            </ul>
+          </section>
+        </div>
+
+        <div class="note">
+          <p class="small" style="margin:0;">
+            Best move: decide your “style” first (workflow + cleanup). Then pick the model family that matches.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="comparison" aria-labelledby="table-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="table-title">Comparison table</h2>
+          <p class="section-subtitle">What changes daily, not what looks good on the box.</p>
+        </div>
+
+        <div class="table-wrap">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Criteria</th>
+                <th>Ninja (typical)</th>
+                <th>Cosori (typical)</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="best">Controls</td>
+                <td class="muted">Direct, fast workflow. Often very “do the thing” oriented.</td>
+                <td class="muted">Often simple and approachable; depends on exact interface.</td>
+              </tr>
+              <tr>
+                <td class="best">Noise</td>
+                <td class="muted">Varies by model; fan tone can be noticeable.</td>
+                <td class="muted">Often comparable; check real-world owner reports by model.</td>
+              </tr>
+              <tr>
+                <td class="best">Cleanup</td>
+                <td class="muted">Depends on insert + coating; watch crevices and trays.</td>
+                <td class="muted">Often straightforward; still verify coating durability.</td>
+              </tr>
+              <tr>
+                <td class="best">Consistency</td>
+                <td class="muted">Strong when loads aren’t crowded.</td>
+                <td class="muted">Can be excellent; model family matters.</td>
+              </tr>
+              <tr>
+                <td class="best">Value</td>
+                <td class="muted">Often mid-range; you pay for workflow and performance feel.</td>
+                <td class="muted">Often strong value; pick carefully within the lineup.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="two-col">
+          <div class="col">
+            <h3>Related Ninja pages</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a></li>
+              <li><a href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Need a shortlist instead?</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+              <li><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks. Clear criteria. Trade-offs explained.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">We evaluate air fryers using repeatable checks and clear criteria, then explain trade-offs.</p>
+          <ul>
+            <li><strong>Usability:</strong> controls, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency under normal home use.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> realistic longevity signals.</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.</p>
+          </div>
+          <div class="note attention">
+            <p class="small" style="margin:0;">Informational only. Models and performance vary by usage and batch size.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-legal">
+        <p class="small">Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.</p>
+        <p class="small">Privacy: <a href="/privacy/">Privacy policy</a>.</p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
