--- a/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/index.html
+++ b/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/index.html
@@ -1,1 +1,363 @@
+<!doctype html>
+<html lang="en-US">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>Ninja Air Fryer Review (2026) | KitchenGearLab</title>
+  <meta name="description" content="Ninja Air Fryer review for 2026: who it’s for, what it does well, and the trade-offs that matter day-to-day. Calm, test-driven buying guidance." />
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1" />
+  <meta name="referrer" content="strict-origin-when-cross-origin" />
+  <meta name="color-scheme" content="light only" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <link rel="canonical" href="https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/" />
+  <link rel="stylesheet" href="/assets/css/styles.css" />
+
+  <!-- Favicons (root) -->
+  <link rel="icon" href="/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <!-- Open Graph -->
+  <meta property="og:site_name" content="KitchenGearLab" />
+  <meta property="og:type" content="article" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:url" content="https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/" />
+  <meta property="og:title" content="Ninja Air Fryer Review (2026) | KitchenGearLab" />
+  <meta property="og:description" content="Who it’s for, what it does well, and the trade-offs that matter day-to-day. Calm, test-driven buying guidance." />
+  <meta property="og:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-air-fryer-review-og-1200x630.webp" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/webp" />
+  <meta property="og:image:alt" content="Premium editorial scene featuring a Ninja-style air fryer on a clean counter in soft daylight." />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Ninja Air Fryer Review (2026) | KitchenGearLab" />
+  <meta name="twitter:description" content="Who it’s for, what it does well, and the trade-offs that matter day-to-day." />
+  <meta name="twitter:image" content="https://kitchengearlab.github.io/assets/images/og/ninja-air-fryer-review-og-1200x630.webp" />
+  <meta name="twitter:image:alt" content="Premium editorial scene featuring a Ninja-style air fryer on a clean counter in soft daylight." />
+
+  <!-- Performance -->
+  <link rel="preload" as="image"
+        href="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-1600x840.webp"
+        imagesrcset="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-1600x840.webp 1600w, https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-2400x1260.webp 2400w"
+        imagesizes="(max-width: 900px) 100vw, 40vw" />
+
+  <link rel="preconnect" href="https://www.googletagmanager.com" crossorigin />
+  <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+
+  <!-- ✅ GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PNC93WEF7E"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PNC93WEF7E', { anonymize_ip: true, send_page_view: true });
+  </script>
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "@id": "https://kitchengearlab.github.io/#organization",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png",
+          "width": 512,
+          "height": 512
+        }
+      },
+      {
+        "@type": "WebSite",
+        "@id": "https://kitchengearlab.github.io/#website",
+        "name": "KitchenGearLab",
+        "url": "https://kitchengearlab.github.io/",
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US"
+      },
+      {
+        "@type": "BreadcrumbList",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/#breadcrumbs",
+        "itemListElement": [
+          { "@type": "ListItem", "position": 1, "name": "Home", "item": "https://kitchengearlab.github.io/" },
+          { "@type": "ListItem", "position": 2, "name": "Best Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/" },
+          { "@type": "ListItem", "position": 3, "name": "Ninja Air Fryers", "item": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/" },
+          { "@type": "ListItem", "position": 4, "name": "Ninja Air Fryer Review", "item": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/" }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/#webpage",
+        "url": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/",
+        "name": "Ninja Air Fryer Review (2026)",
+        "description": "Ninja Air Fryer review for 2026: who it’s for, what it does well, and the trade-offs that matter day-to-day.",
+        "isPartOf": { "@id": "https://kitchengearlab.github.io/#website" },
+        "publisher": { "@id": "https://kitchengearlab.github.io/#organization" },
+        "inLanguage": "en-US",
+        "breadcrumb": { "@id": "https://kitchengearlab.github.io/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/#breadcrumbs" },
+        "primaryImageOfPage": {
+          "@type": "ImageObject",
+          "url": "https://kitchengearlab.github.io/assets/images/og/ninja-air-fryer-review-og-1200x630.webp",
+          "width": 1200,
+          "height": 630
+        },
+        "datePublished": "2026-02-01",
+        "dateModified": "2026-02-01"
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" role="banner">
+    <div class="container">
+      <div class="header-inner">
+        <a class="brand" href="/" aria-label="KitchenGearLab home">
+          <img src="https://kitchengearlab.github.io/assets/images/brand/kitchengearlab-logo-512.png" width="32" height="32" alt="" loading="eager" decoding="async" />
+          <span class="brand-text">
+            <span class="brand-name">KitchenGearLab</span>
+            <span class="brand-tagline">Neutral reviews. Practical decisions.</span>
+          </span>
+        </a>
+
+        <nav class="site-nav" aria-label="Primary">
+          <ul class="nav-list">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <nav class="breadcrumbs" aria-label="Breadcrumb">
+    <div class="container">
+      <ol class="breadcrumbs-list">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">›</li>
+        <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+        <li aria-hidden="true">›</li>
+        <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers</a></li>
+        <li aria-hidden="true">›</li>
+        <li><span aria-current="page">Ninja Air Fryer Review</span></li>
+      </ol>
+    </div>
+  </nav>
+
+  <main id="main" role="main" tabindex="-1">
+
+    <section class="hero" aria-labelledby="hero-title">
+      <div class="container">
+        <div class="hero-grid">
+
+          <div class="hero-copy">
+            <p class="kicker">Review · buying decision</p>
+            <h1 id="hero-title">Ninja Air Fryer Review</h1>
+
+            <p class="lead">
+              This review focuses on the day-to-day experience: workflow, cleanup friction, and consistency at normal home loads.
+              No hype, just the trade-offs that matter when you actually live with it.
+            </p>
+
+            <div class="hero-actions" role="group" aria-label="Primary actions">
+              <a class="btn btn-accent" href="#verdict">Verdict</a>
+              <a class="btn btn-secondary" href="#who">Who it’s for</a>
+            </div>
+
+            <p class="micro-note">
+              Trust-first:
+              <a href="/about/">About</a> · <a href="/disclosure/">Disclosure</a> · <a href="/privacy/">Privacy</a>
+            </p>
+
+            <p class="small">Last updated: 2026-02-01</p>
+          </div>
+
+          <div class="hero-media" aria-label="Hero image">
+            <picture>
+              <source type="image/webp"
+                      srcset="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-1600x840.webp 1600w,
+                              https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-2400x1260.webp 2400w"
+                      sizes="(max-width: 900px) 100vw, 40vw" />
+              <img src="https://kitchengearlab.github.io/assets/images/hero/ninja-air-fryer-review-hero-1600x840.webp"
+                   width="1600" height="840"
+                   alt="Premium editorial scene featuring a Ninja-style air fryer on a clean counter in soft daylight."
+                   loading="eager" decoding="async" fetchpriority="high" />
+            </picture>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="verdict" aria-labelledby="verdict-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="verdict-title">Verdict</h2>
+          <p class="section-subtitle">The calm summary before the details.</p>
+        </div>
+
+        <div class="note">
+          <p class="small" style="margin:0;">
+            In most kitchens, a Ninja-style air fryer is a strong fit if you want a direct workflow and consistent crisping at realistic batch sizes.
+            The trade-offs are usually footprint, noise (fan tone), and cleanup details that vary by insert/coating design.
+          </p>
+        </div>
+
+        <div class="pros-cons" aria-label="Pros and cons">
+          <section class="pros">
+            <h3>What it does well</h3>
+            <ul>
+              <li>Direct, no-fuss workflow for everyday cooking.</li>
+              <li>Strong results when food isn’t crowded.</li>
+              <li>Controls that stay usable long-term.</li>
+              <li>Good “weeknight” reliability.</li>
+            </ul>
+          </section>
+
+          <section class="cons">
+            <h3>Trade-offs to know</h3>
+            <ul>
+              <li>Counter space and storage reality matters.</li>
+              <li>Cleanup friction varies by basket/insert design.</li>
+              <li>Noise can be noticeable in small spaces.</li>
+              <li>Usable capacity can be less than marketing suggests.</li>
+            </ul>
+          </section>
+        </div>
+      </div>
+    </section>
+
+    <section class="section" id="who" aria-labelledby="who-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="who-title">Who it’s for</h2>
+          <p class="section-subtitle">Match the appliance to your routine, not your wishful thinking.</p>
+        </div>
+
+        <div class="table-wrap">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Situation</th>
+                <th>Good fit?</th>
+                <th class="muted">Why</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="best">You cook small-to-medium batches often</td>
+                <td><span class="badge">Yes</span></td>
+                <td class="muted">Air fryers shine when food can sit in one layer with airflow.</td>
+              </tr>
+              <tr>
+                <td class="best">You hate complicated controls</td>
+                <td><span class="badge">Yes</span></td>
+                <td class="muted">A direct workflow is usually the main appeal.</td>
+              </tr>
+              <tr>
+                <td class="best">You expect “family-size” in one round</td>
+                <td class="muted">Maybe</td>
+                <td class="muted">Usable capacity is often smaller than marketing capacity. Measure your needs.</td>
+              </tr>
+              <tr>
+                <td class="best">You want the quietest kitchen</td>
+                <td class="muted">Maybe</td>
+                <td class="muted">Fan noise varies by model and load. Consider your space.</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="two-col">
+          <div class="col">
+            <h3>Compare before buying</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/ninja-vs-philips/">Ninja vs Philips</a></li>
+              <li><a href="/best-air-fryers/ninja-vs-cosori/">Ninja vs Cosori</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Need the shortlist?</h3>
+            <ul class="link-list">
+              <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+              <li><a href="/guides/how-to-choose-an-air-fryer/">How to choose an air fryer</a></li>
+            </ul>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+    <section class="section" id="method" aria-labelledby="method-title">
+      <div class="container">
+        <div class="section-head">
+          <h2 id="method-title">How we evaluate</h2>
+          <p class="section-subtitle">Repeatable checks. Clear criteria. Trade-offs explained.</p>
+        </div>
+
+        <div class="stack">
+          <p class="muted">
+            We evaluate air fryers using repeatable checks and clear criteria, then explain trade-offs you can actually use.
+          </p>
+
+          <ul>
+            <li><strong>Usability:</strong> controls, day-to-day friction.</li>
+            <li><strong>Performance:</strong> consistency at realistic home loads.</li>
+            <li><strong>Cleanup:</strong> residue traps, dishwasher practicality.</li>
+            <li><strong>Durability cues:</strong> fit/finish, hinges, coatings, basket wear.</li>
+            <li><strong>Transparency:</strong> no unverified claims.</li>
+          </ul>
+
+          <div class="note">
+            <p class="small" style="margin:0;">Affiliate disclosure is explicit and separate. See <a href="/disclosure/">Disclosure</a>.</p>
+          </div>
+
+          <div class="note attention">
+            <p class="small" style="margin:0;">Informational only. Models and performance vary by usage, batch size, and food type.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="container">
+      <div class="footer-grid">
+        <div>
+          <p class="footer-name">KitchenGearLab</p>
+          <p class="footer-note">Neutral, test-driven kitchen gear reviews and buying guides.</p>
+        </div>
+        <nav aria-label="Footer">
+          <ul class="footer-links">
+            <li><a href="/guides/">Guides</a></li>
+            <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/disclosure/">Disclosure</a></li>
+            <li><a href="/privacy/">Privacy</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer-legal">
+        <p class="small">Affiliate disclosure: Some links may earn a commission. See <a href="/disclosure/">Disclosure</a>.</p>
+        <p class="small">Privacy: <a href="/privacy/">Privacy policy</a>.</p>
+        <p class="small"><span aria-hidden="true">©</span> KitchenGearLab</p>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
