--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
           <ul class="nav-list">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
-            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+            <!-- ✅ Ninja Hub now goes to /best-air-fryers/ninja-air-fryers/ -->
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
           </ul>
         </nav>
       </div>
@@ -226,9 +227,9 @@
           </article>
 
           <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/ninja-air-fryers/">Ninja Air Fryers Hub</a></h3>
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-air-fryers/">Ninja Air Fryers Hub</a></h3>
             <p class="card-text">Brand hub: key models, what changes between generations, and what to buy.</p>
-            <p class="card-meta"><a class="card-link" href="/ninja-air-fryers/">Explore hub</a></p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-air-fryers/">Explore hub</a></p>
           </article>
 
           <article class="card" role="listitem">
@@ -267,15 +268,15 @@
           </article>
 
           <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></h3>
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Ninja Air Fryer Review</a></h3>
             <p class="card-text">Who it fits, what it does well, and the trade-offs that matter.</p>
-            <p class="card-meta"><a class="card-link" href="/ninja-air-fryers/ninja-air-fryer-review/">Open</a></p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-air-fryers/ninja-air-fryer-review/">Open</a></p>
           </article>
 
           <article class="card" role="listitem">
-            <h3 class="card-title"><a href="/ninja-air-fryers/ninja-creami-review/">Ninja Creami Review</a></h3>
+            <h3 class="card-title"><a href="/best-air-fryers/ninja-air-fryers/ninja-creami-review/">Ninja Creami Review</a></h3>
             <p class="card-text">Texture results, daily workflow, cleanup friction, and durability cues.</p>
-            <p class="card-meta"><a class="card-link" href="/ninja-air-fryers/ninja-creami-review/">Open</a></p>
+            <p class="card-meta"><a class="card-link" href="/best-air-fryers/ninja-air-fryers/ninja-creami-review/">Open</a></p>
           </article>
 
           <article class="card" role="listitem">
@@ -350,7 +351,8 @@
           <ul class="footer-links">
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/best-air-fryers/">Best Air Fryers</a></li>
-            <li><a href="/ninja-air-fryers/">Ninja Hub</a></li>
+            <!-- ✅ Footer Ninja Hub updated too -->
+            <li><a href="/best-air-fryers/ninja-air-fryers/">Ninja Hub</a></li>
             <li><a href="/about/">About</a></li>
             <li><a href="/disclosure/">Disclosure</a></li>
             <li><a href="/privacy/">Privacy</a></li>
